Added google map api key. Fixed javascript syntax errors.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>SF Food Truck Search Demo</title>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
         <style>
             .container {
                 width: 800px;
@@ -29,7 +28,7 @@
             <!-- Map container -->
             <div id="map"></div>
         </div>
-
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0BYtji8ghBbOdoDTOekb25QqHmXAvBXY&callback=initMap" type="text/javascript"></script>
         <script src="./js/foodtruck-demo.js" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
