Change the range query to within 1km.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <body>
         <div class="container">
             <h1>SF Food Trucks Finder - Demo</h1>
-            <p>This is a demo to help you find food trucks around San Francisco, CA.</p>
-            <p>For testing purposes, click on the map to mark as the current position. It will search for food trucks nearby.</p>
+            <p>This is a demo to help you find food trucks within 1k distance from the current location in San Francisco, CA.</p>
+            <p>For testing purposes, click on the map to mark as the current location. It will search for food trucks nearby.</p>
             <!-- Map container -->
             <div id="map"></div>
         </div>
